    * Bug 712: default plotstring colors are wrong after a
      non-title-screen load [James]
    * Bug 674:A line of pixels is sometimes "vomited" into the corner
      of the sprite editor [James]
    * Removed obsolete warning about long filenames from relump
    * Removed obsolete unneeded linux-specific hacks from unlump
    * Bug 646: Delay before caption doesn't seem to work [James]

  * Plotscripting
    * Show a future compatibility warning when using certain punctuation
      such as [square brackets] or {curly braces} in script names or
      variable names. This is to ease the transition for scripters when
      arrays become available.

October 03 2008 [xocolatl+]

  * Vikings of Midgard
    * Character portraits [Fenrir-Lunaris]
    * New spell quests [Fenrir-Lunaris]
    * Other minor fixes [Fenrir-Lunaris]

October 02 2008 [xocolatl]

  * New Features
    * Spells and items used outside of battle now display their
      target stat instead of always displaying HP [Mike]
    * Visual placement of hero's hand positions and weapon's
      handle positions. [James]
    * Text boxes can be exported as a .TXT file, edited with
       your favorite text editor or spellchecker, and then
       re-imported back into your game [James, Mike]
    * Character portraits! You can now draw 50x50 pictures for
      heroes and NPCs that can be displayed in text boxes [James]
    * You can now type in NPC numbers in NPC placement mode in the
      map editor [James]
    * You can now type in formation set numbers in foemapping mode
      in the map editor [James]
    * Draw your own graphical Text Box borders [James]
    * NPC-per-map limit raised from 36 to 100 [James]
    * New text box conditional to display menus [James]
    * New menu bitset to advance any open text box when the menu
      closes [James]
    * New attack bitsets
      * "Don't trigger spawning on kill" [James]
      * "Check costs when used as an item" [James]